--- a/packages/stripe_android/android/build.gradle
+++ b/packages/stripe_android/android/build.gradle
@@ -53,4 +53,18 @@ dependencies {
 
     // Users need to declare this dependency on their own, otherwise all methods are a no-op
     compileOnly 'com.stripe:stripe-android-issuing-push-provisioning:1.1.0'
+
+        
+    constraints{
+        implementation('com.stripe:stripe:android'){
+            version{
+                strictly '20.11.0'
+            }
+        }
+        implementation('com.stripe:financial-connections') {
+            version {
+                strictly '20.11.0'
+            }
+        }
+    }
 }
